--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
             <nav>
                 <h3 class="nav title text-primary"> LOGO</h3>
                 <ul>
-                    <li><a href><button>Sign up</button></a></li>
+                    <li><a href><button class="btn-primary">Sign up</button></a></li>
                 </ul>
 
             </nav>
+            <div class="banner">
+                <h2 class="banner-title">Cool Dark UI Template for <br> Webflow Agencies!
+                    </h2>
+                  <button class="btn-primary">Stay Focused</button>
+            </div>
 
         </header>
         <main>
