--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </head>
     <body class="inter-normal">
-        <header>
+        <header class="header">
             <nav>
                 <h3 class="nav title text-primary"> LOGO</h3>
                 <ul>
