--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 
         </header>
         <main>
+            <div class="banner-container">
+                <div class="banner-2">
+                    <h2>See it action</h2>
+                    <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                    <button class="btn-primary">Launch Live Preview</button>
+                </div>
+                <img class="banner-profile-picture" src="images/wc-mini.png" alt="">
+            </div>
+            
+          
+
 
         </main>
         <footer>
