--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-< lang="en">
+<lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="page.css">
 
     </head>
-    < class="inter-normal">
+    <class="inter-normal">
         <header class="header">
             <nav>
                 <h3 class="nav title text-primary"> LOGO</h3>
@@ -54,10 +54,85 @@
                     </div>
                 </div>
             </div>
-           
+
+
+
+            <section class="testimonials">
+                <div class="container">
+                  <h2>What our users say</h2>
+                  <div class="testimonial-grid">
+                    <div class="testimonial">
+                      <div class="stars"><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""></div>
+                      <p> Loved by Designers.<br>Amazing results for modern design needs. </p><br>
+                      <div class="nani">
+                      <img src="images/avatar.png" alt="">
+                      <div class="user">reviewer name <br>Date</div></div>
+                    </div>
+                    <div class="testimonial">
+                      <div class="stars"><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""></div>
+                      <p> Loved by Designers.<br>Perfectly smooth and professional. </p><br>
+                      <div class="nani">
+                      <img src="images/avatar.png" alt="">
+                      <div class="user">reviewer name <br>Date</div></div>
+                    </div>
+                    <div class="testimonial">
+                      <div class="stars">
+                        <img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt=""><img src="images/icon-star.png" alt="">
+                      </div>
+                      <p> Loved by Designers.<br>Highly recommend for agencies! </p><br>
+                       <div class="nani">
+                      <img src="images/avatar.png" alt="">
+                      <div class="user">reviewer name <br>Date</div></div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+            <section class="cta">
+                <div class="container-2">
+                    <h2>Ready to focus better</h2>
+                    <p>This template instantly leveled up our presence- Studio Vertex</p>
+                    <button class="btn-primary">Get Started Free</button> 
+                </div>
+                <div class="cta">
+                    <img src="images/wc-big.png" alt="">
+                </div>
+              </section>
+
+
+                <section class="contact-section">
+                    <div class="contact-content">
+                        <h2>Let's Get in Touch</h2>
+                    </div>
+                    <div class="contact-form-container">
+                        <form class="contact-form">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" placeholder="example@email.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" id="name" name="name" placeholder="full name">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" placeholder="write your message...."></textarea>
+                            </div>
+                            <button class="btn-primary">Get in Touch</button>
+                        </form>
+                    </div>
+                </section>
 
         </main>
         <footer>
+            <div class="pointer">LOGO</div>
+    <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p><br>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>How it work</li>
+      <li>Service</li>
+    </ul>
 
         </footer>
 
