--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
             <section class="testimonials">
-                <div class="container">
+                <div class="container-3">
                   <h2>What our users say</h2>
                   <div class="testimonial-grid">
                     <div class="testimonial">
