--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@
         <footer>
             <div class="pointer">LOGO</div>
     <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p><br>
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>How it work</li>
-      <li>Service</li>
-    </ul>
-
+    <footer>
+        <h3>Contact Us</h3>
+        <form action="/send-message" method="post">
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="message" placeholder="Your Message" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </footer>
+    
         </footer>
 
     </body>
